unpackaged/main/default/objects/Ringba_Call__c/Ringba_Call__c.object-meta.xml
<CustomObject>
    <label>Ringba Call</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Ringba Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ringba Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>