unpackaged/main/default/objects/Ringba_Call__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>ANI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>