unpackaged/main/default/objects/Ringba_Call__c/fields/Created_Date_With_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_With_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (With Time)</label>
    <type>DateTime</type>
</CustomField>