unpackaged/main/default/objects/Ringba_Call__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <label>DNIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>