unpackaged/main/default/objects/Ringba_Call__c/fields/FX_Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>FX_Call_Start_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>