unpackaged/main/default/objects/Ringba_Call__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Ringba Calls</relationshipLabel>
    <relationshipName>Ringba_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>