unpackaged/main/default/objects/Ringba_Call__c/fields/Referral_Partner_API_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_API_External_Id__c</fullName>
    <label>Referral Partner API External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>