unpackaged/main/default/objects/Ringba_Call__c/fields/Ringba_Id__c.field-meta.xml
<CustomField>
    <fullName>Ringba_Id__c</fullName>
    <label>Ringba Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>