unpackaged/main/default/objects/Ringba_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ringba_Id__c</columns>
    <columns>Intake__c</columns>
    <columns>Campaign__c</columns>
    <columns>Marketing_Source__c</columns>
    <columns>ANI__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>